--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "solc-vm-rs"
+name = "svm-rs"
 version = "0.1.0"
 edition = "2018"
 authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
 
 [lib]
-name = "solc_vm_lib"
+name = "svm_lib"
 path = "src/lib.rs"
 
 [[bin]]
@@ -13,14 +13,14 @@ name = "solc"
 path = "src/solc/main.rs"
 
 [[bin]]
-name = "solc-vm"
-path = "src/solc-vm/main.rs"
+name = "svm"
+path = "src/svm/main.rs"
 
 [dependencies]
 anyhow = "1.0.43"
 cfg-if = "1.0.0"
 home = "0.5.3"
-lazy_static = "1.4.0"
+once_cell = "1.8.0"
 rand = "0.8.4"
 reqwest = { version = "0.11.4", features = [ "json" ] }
 serde = { version = "1.0.130", features = [ "derive" ] }
