--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ path = "src/svm/main.rs"
 [dependencies]
 anyhow = "1.0.43"
 cfg-if = "1.0.0"
+crossterm  = "0.21.0"
 home = "0.5.3"
+itertools = "0.10.1"
 once_cell = "1.8.0"
 rand = "0.8.4"
 reqwest = { version = "0.11.4", features = [ "json" ] }
