--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,10 @@ path = "src/svm/main.rs"
 [dependencies]
 anyhow = "1.0.43"
 cfg-if = "1.0.0"
-crossterm  = "0.21.0"
+console = "0.14.1"
+dialoguer = "0.8.0"
 home = "0.5.3"
+indicatif = "0.16.2"
 itertools = "0.10.1"
 once_cell = "1.8.0"
 rand = "0.8.4"
