--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,5 +76,5 @@ jobs:
         shell: cmd
 
       - name: test
-        run: cargo test -- --nocapture
+        run: cargo test
         shell: cmd
