--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,26 +24,32 @@ name = "svm"
 path = "src/svm/main.rs"
 
 [dependencies]
-anyhow = "1.0.43"
-cfg-if = "1.0.0"
-console = "0.14.1"
-dialoguer = "0.8.0"
-hex = "0.4.3"
-home = "0.5.3"
-indicatif = "0.16.2"
-itertools = "0.10.1"
-once_cell = "1.8.0"
-rand = "0.8.4"
-reqwest = { version = "0.11.4", features = [ "json" ] }
-semver = "1.0.4"
-serde = { version = "1.0.130", features = [ "derive" ] }
-serde_json = "1.0.59"
-sha2 = "0.9.8"
+anyhow = { version = "1.0.43", default-features = false, features = ["std"] }
+cfg-if = { version = "1.0.0", default-features = false }
+console = { version = "0.14.1", default-features = false }
+dialoguer = { version = "0.8.0", default-features = false }
+home = { version = "0.5.3", default-features = false }
+indicatif = { version = "0.16.2", default-features = false }
+itertools = { version = "0.10.1", default-features = false, features = ["use_std"] }
+once_cell = { version = "1.8.0", default-features = false }
+rand = { version = "0.8.4", default-features = false }
+reqwest = { version = "^0.11.7", default-features = false, features = [ "json" ] }
+semver = { version = "1.0.4", default-features = false, features = ["std"] }
+serde = { version = "1.0.130", default-features = false, features = ["derive"] }
+serde_json = { version = "1.0.59", default-features = false }
 structopt = { version = "0.3", default-features = false }
-tempfile = "3.2.0"
-thiserror = "1.0.29"
+tempfile = { version = "3.2.0", default-features = false }
+thiserror = { version = "1.0.29", default-features = false }
 tokio = { version = "1.11.0", features = [ "full" ] }
-url = "2.2.2"
+url = { version = "2.2.2", default-features = false }
+sha2 = { version = "0.9.8", default-features = false }
+hex = { version = "0.4.3", default-features = false, features = ["std"] }
 
 [build-dependencies]
-home = "0.5.3"
+home = { version = "0.5.3", default-features = false }
+
+[features]
+default = ["rustls"]
+openssl = ["reqwest/native-tls"]
+rustls = ["reqwest/rustls-tls"]
+sha2-asm = ["sha2/asm"]
