--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,17 +30,19 @@ console = { version = "0.14.1", default-features = false }
 dialoguer = { version = "0.8.0", default-features = false }
 home = { version = "0.5.3", default-features = false }
 indicatif = { version = "0.16.2", default-features = false }
-itertools = { version = "0.10.1", default-features = false, features = ["use_std"] }
+itertools = { version = "0.10.1", default-features = false, features = [
+  "use_std",
+] }
 once_cell = { version = "1.8.0", default-features = false }
 rand = { version = "0.8.4", default-features = false }
-reqwest = { version = "^0.11.7", default-features = false, features = [ "json" ] }
+reqwest = { version = "^0.11.7", default-features = false, features = ["json"] }
 semver = { version = "1.0.4", default-features = false, features = ["std"] }
 serde = { version = "1.0.130", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.59", default-features = false }
-structopt = { version = "0.3", default-features = false }
+clap = { version = "3.0.6", features = ["derive"] }
 tempfile = { version = "3.2.0", default-features = false }
 thiserror = { version = "1.0.29", default-features = false }
-tokio = { version = "1.11.0", features = [ "full" ] }
+tokio = { version = "1.11.0", features = ["full"] }
 url = { version = "2.2.2", default-features = false }
 sha2 = { version = "0.9.8", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = ["std"] }
