--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,12 +29,14 @@ cfg-if = { version = "1.0.0", default-features = false }
 clap = { version = "3.0.6", features = ["derive"] }
 console = { version = "0.14.1", default-features = false }
 dialoguer = { version = "0.8.0", default-features = false }
+env_logger = "0.9.0"
 hex = { version = "0.4.3", default-features = false, features = ["std"] }
 home = { version = "0.5.3", default-features = false }
 indicatif = { version = "0.16.2", default-features = false }
 itertools = { version = "0.10.1", default-features = false, features = [
   "use_std",
 ] }
+log = "0.4.14"
 once_cell = { version = "1.8.0", default-features = false }
 rand = { version = "0.8.4", default-features = false }
 reqwest = { version = "^0.11.7", default-features = false, features = ["json"] }
