--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,14 +29,12 @@ cfg-if = { version = "1.0.0", default-features = false }
 clap = { version = "3.0.6", features = ["derive"] }
 console = { version = "0.14.1", default-features = false }
 dialoguer = { version = "0.8.0", default-features = false }
-env_logger = "0.9.0"
 hex = { version = "0.4.3", default-features = false, features = ["std"] }
 home = { version = "0.5.3", default-features = false }
 indicatif = { version = "0.16.2", default-features = false }
 itertools = { version = "0.10.1", default-features = false, features = [
   "use_std",
 ] }
-log = "0.4.14"
 once_cell = { version = "1.8.0", default-features = false }
 rand = { version = "0.8.4", default-features = false }
 reqwest = { version = "^0.11.7", default-features = false, features = ["json"] }
@@ -47,6 +45,7 @@ sha2 = { version = "0.9.9", default-features = false }
 tempfile = { version = "3.2.0", default-features = false }
 thiserror = { version = "1.0.29", default-features = false }
 tokio = { version = "1.11.0", features = ["full"] }
+tracing = "0.1.30"
 url = { version = "2.2.2", default-features = false }
 
 [build-dependencies]
