feat: add blocking api calls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,4 @@ default = ["rustls"]
 openssl = ["reqwest/native-tls"]
 rustls = ["reqwest/rustls-tls"]
 sha2-asm = ["sha2/asm"]
+blocking = ["reqwest/blocking"]
