--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ itertools = { version = "0.10.1", default-features = false, features = [
 once_cell = { version = "1.8.0", default-features = false }
 rand = { version = "0.8.4", default-features = false }
 reqwest = { version = "^0.11.7", default-features = false, features = ["json"] }
-semver = { version = "1.0.4", default-features = false, features = ["std"] }
+semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }
 serde = { version = "1.0.130", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.59", default-features = false }
 sha2 = { version = "0.9.9", default-features = false }
