--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
+      run: cargo build
     - name: Formatting
       run: cargo fmt --all -- --check
     - name: Linting
       run: cargo clippy -- -D warnings
     - name: Run tests
-      run: cargo test --all-features
+      run: |
+        # install supported targets
+        rustup target add x86_64-unknown-linux-gnu
+        rustup target add aarch64-unknown-linux-gnu
+        rustup target add x86_64-apple-darwin
+        rustup target add aarch64-apple-darwin
+        # test against supported targets
+        cargo test --all-features --target x86_64-unknown-linux-gnu
+        cargo test --all-features --target aarch64-unknown-linux-gnu
+        cargo test --all-features --target x86_64-apple-darwin
+        cargo test --all-features --target aarch64-apple-darwin
 
   windows-build:
     runs-on: windows-latest
