--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,7 @@ jobs:
     - name: Linting
       run: cargo clippy -- -D warnings
     - name: Run tests
-      run: |
-        # install supported targets
-        rustup target add x86_64-unknown-linux-gnu
-        rustup target add aarch64-unknown-linux-gnu
-        rustup target add x86_64-apple-darwin
-        rustup target add aarch64-apple-darwin
-        # test against supported targets
-        cargo test --all-features --target x86_64-unknown-linux-gnu
-        cargo test --all-features --target aarch64-unknown-linux-gnu
-        cargo test --all-features --target x86_64-apple-darwin
-        cargo test --all-features --target aarch64-apple-darwin
+      run: cargo test --all-features
 
   windows-build:
     runs-on: windows-latest
