--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ path = "src/svm/main.rs"
 anyhow = { version = "1.0.43", default-features = false, features = ["std"] }
 cfg-if = { version = "1.0.0", default-features = false }
 clap = { version = "3.0.6", features = ["derive"] }
+concat-idents = "1.1.3"
 console = { version = "0.14.1", default-features = false }
 dialoguer = { version = "0.8.0", default-features = false }
 fs2 = "0.4.3"
