--- a/svm-builds/Cargo.toml
+++ b/svm-builds/Cargo.toml
@@ -14,7 +14,7 @@ build = "build.rs"
 
 [build-dependencies]
 build_const = "0.2.2"
-svm = { package = "svm-rs", path = "..", features = ["blocking"]}
+svm = { package = "svm-rs", version = "0.2.10", path = "..", features = ["blocking"]}
 semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }
 hex = "0.4.3"
 serde_json = "1.0.79"
