--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ tokio = { version = "1.11.0", features = ["full"] }
 tracing = "0.1.30"
 url = { version = "2.2.2", default-features = false }
 
+[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
+zip = "0.6.2"
+
 [build-dependencies]
 home = { version = "0.5.3", default-features = false }
 
