--- a/svm-builds/Cargo.toml
+++ b/svm-builds/Cargo.toml
@@ -23,3 +23,11 @@ serde_json = "1.0.79"
 build_const = "0.2.2"
 hex = "0.4.3"
 semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }
+
+[features]
+# helper feature to block network access
+_offline = []
+
+[package.metadata.docs.rs]
+# network access is blocked during builds
+features = ["_offline"]
