--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,36 +24,34 @@ name = "svm"
 path = "src/svm/main.rs"
 
 [dependencies]
-anyhow = { version = "1.0.43", default-features = false, features = ["std"] }
+anyhow = { version = "1.0.70", default-features = false, features = ["std"] }
 cfg-if = { version = "1.0.0", default-features = false }
-clap = { version = "3.0.6", features = ["derive"] }
-console = { version = "0.14.1", default-features = false }
-dialoguer = { version = "0.8.0", default-features = false }
+clap = { version = "4.2.0", features = ["derive"] }
+console = { version = "0.15.5", default-features = false }
+dialoguer = { version = "0.10.3", default-features = false }
 fs2 = "0.4.3"
 hex = { version = "0.4.3", default-features = false, features = ["std"] }
-home = { version = "0.5.3", default-features = false }
-indicatif = { version = "0.16.2", default-features = false }
-itertools = { version = "0.10.1", default-features = false, features = [
-  "use_std",
-] }
-once_cell = { version = "1.8.0", default-features = false }
-rand = { version = "0.8.4", default-features = false }
-reqwest = { version = "^0.11.7", default-features = false, features = ["json"] }
-semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }
-serde = { version = "1.0.130", default-features = false, features = ["derive"] }
-serde_json = { version = "1.0.59", default-features = false }
-sha2 = { version = "0.9.9", default-features = false }
-tempfile = { version = "3.2.0", default-features = false }
-thiserror = { version = "1.0.29", default-features = false }
-tokio = { version = "1.11.0", features = ["full"] }
-tracing = "0.1.30"
-url = { version = "2.2.2", default-features = false }
+home = { version = "0.5.4", default-features = false }
+indicatif = { version = "0.17.3", default-features = false }
+itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
+once_cell = { version = "1.17.1", default-features = false }
+rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
+reqwest = { version = "0.11.16", default-features = false, features = ["json"] }
+semver = { version = "1.0.17", default-features = false, features = ["std", "serde"] }
+serde = { version = "1.0.159", default-features = false, features = ["derive"] }
+serde_json = { version = "1.0.95", default-features = false }
+sha2 = { version = "0.10.6", default-features = false }
+tempfile = { version = "3.5.0", default-features = false }
+thiserror = { version = "1.0.40", default-features = false }
+tokio = { version = "1.27.0", features = ["full"] }
+tracing = "0.1.37"
+url = { version = "2.3.1", default-features = false }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
-zip = "0.6.3"
+zip = "0.6.4"
 
 [build-dependencies]
-home = { version = "0.5.3", default-features = false }
+home = { version = "0.5.4", default-features = false }
 
 [features]
 default = ["rustls"]
@@ -61,7 +59,6 @@ openssl = ["reqwest/native-tls"]
 rustls = ["reqwest/rustls-tls"]
 sha2-asm = ["sha2/asm"]
 blocking = ["reqwest/blocking"]
-
 
 [workspace]
 members = ["svm-builds"]
