Deprecate `sha2-asm` feature
From [`sha2` Cargo.toml](https://github.com/RustCrypto/hashes/blob/91dfb20e0dfed8988309b492034231dce8e5b9ac/sha2/Cargo.toml#LL33C22-L33C83):
WARNING: this feature SHOULD NOT be enabled by library crates

--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -63,9 +63,11 @@ default = ["rustls", "cli", "solc"]
 # lib
 openssl = ["reqwest/native-tls"]
 rustls = ["reqwest/rustls-tls"]
-sha2-asm = ["sha2/asm"]
 blocking = ["reqwest/blocking"]
 
 # bin
 cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
 solc = ["anyhow"]
+
+# deprecated
+sha2-asm = []
