--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -27,7 +27,7 @@ required-features = ["solc"]
 [dependencies]
 fs2 = "0.4"
 hex = "0.4"
-home = "0.5"
+dirs = "5.0"
 once_cell = "1.17"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
 semver = { version = "1.0", features = ["serde"] }
@@ -50,7 +50,7 @@ tokio = { version = "1.28", features = ["rt-multi-thread", "macros"], optional =
 zip = "0.6"
 
 [build-dependencies]
-home = "0.5"
+dirs = "5.0"
 
 [dev-dependencies]
 rand = "0.8"
