--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,12 @@
 [workspace]
 members = ["crates/svm-builds", "crates/svm-rs"]
 resolver = "2"
+
+[workspace.dependencies]
+svm = { package = "svm-rs", version = "0.3.5", path = "crates/svm-rs", default-features = false }
+
+hex = { package = "const-hex", version = "1.10" }
+semver = "1"
+serde = "1"
+serde_json = "1"
+reqwest = { version = "0.11", default-features = false }
