--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -25,14 +25,14 @@ path = "src/bin/solc/main.rs"
 required-features = ["solc"]
 
 [dependencies]
-fs2 = "0.4"
-hex = "0.4"
+fs4 = "0.7"
+hex.workspace = true
 dirs = "5.0"
 once_cell = "1.17"
-reqwest = { version = "0.11", default-features = false, features = ["json"] }
-semver = { version = "1.0", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+reqwest = { workspace = true, default-features = false, features = ["json"] }
+semver = { workspace = true, features = ["serde"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 sha2 = "0.10"
 thiserror = "1.0"
 url = "2.3"
@@ -68,6 +68,3 @@ blocking = ["reqwest/blocking"]
 # bin
 cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
 solc = ["anyhow"]
-
-# deprecated
-sha2-asm = []
