--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -11,8 +11,7 @@ homepage = "https://github.com/roynalnaruto/svm-rs"
 description = "Solidity compiler Version Manager"
 
 [lib]
-name = "svm_lib"
-path = "src/lib.rs"
+name = "svm"
 
 [[bin]]
 name = "svm"
@@ -23,6 +22,9 @@ required-features = ["cli"]
 name = "solc"
 path = "src/bin/solc/main.rs"
 required-features = ["solc"]
+
+[build-dependencies]
+vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }
 
 [dependencies]
 fs4 = "0.7"
@@ -49,9 +51,6 @@ tokio = { version = "1.28", features = ["rt-multi-thread", "macros"], optional =
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
 zip = "0.6"
 
-[build-dependencies]
-dirs = "5.0"
-
 [dev-dependencies]
 rand = "0.8"
 tempfile = "3.5"
@@ -66,5 +65,14 @@ rustls = ["reqwest/rustls-tls"]
 blocking = ["reqwest/blocking"]
 
 # bin
-cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
-solc = ["anyhow"]
+cli = [
+    "dep:anyhow",
+    "dep:clap",
+    "dep:console",
+    "dep:dialoguer",
+    "dep:indicatif",
+    "dep:itertools",
+    "dep:tokio",
+    "dep:vergen",
+]
+solc = ["dep:anyhow"]
