--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,12 @@ license = "MIT OR Apache-2.0"
 readme = "./README.md"
 repository = "https://github.com/alloy-rs/svm-rs"
 homepage = "https://github.com/alloy-rs/svm-rs"
+
+[workspace.dependencies]
+svm = { package = "svm-rs", version = "0.3.5", path = "crates/svm-rs", default-features = false }
+
+hex = { package = "const-hex", version = "1.10" }
+semver = "1"
+serde = "1"
+serde_json = "1"
+reqwest = { version = "0.11", default-features = false }
