--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -12,8 +12,7 @@ repository.workspace = true
 homepage.workspace = true
 
 [lib]
-name = "svm_lib"
-path = "src/lib.rs"
+name = "svm"
 
 [[bin]]
 name = "svm"
@@ -25,15 +24,18 @@ name = "solc"
 path = "src/bin/solc/main.rs"
 required-features = ["solc"]
 
+[build-dependencies]
+vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }
+
 [dependencies]
-fs2 = "0.4"
-hex = "0.4"
+fs4 = "0.7"
+hex.workspace = true
 dirs = "5.0"
-once_cell = "1.19"
-reqwest = { version = "0.11", default-features = false, features = ["json"] }
-semver = { version = "1.0", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+once_cell = "1.17"
+reqwest = { workspace = true, default-features = false, features = ["json"] }
+semver = { workspace = true, features = ["serde"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 sha2 = "0.10"
 thiserror = "1.0"
 url = "2.5"
@@ -50,9 +52,6 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = tr
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
 zip = "0.6"
 
-[build-dependencies]
-dirs = "5.0"
-
 [dev-dependencies]
 rand = "0.8"
 tempfile = "3.10"
@@ -67,8 +66,14 @@ rustls = ["reqwest/rustls-tls"]
 blocking = ["reqwest/blocking"]
 
 # bin
-cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
-solc = ["anyhow"]
-
-# deprecated
-sha2-asm = []
+cli = [
+    "dep:anyhow",
+    "dep:clap",
+    "dep:console",
+    "dep:dialoguer",
+    "dep:indicatif",
+    "dep:itertools",
+    "dep:tokio",
+    "dep:vergen",
+]
+solc = ["dep:anyhow"]
