--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -49,7 +49,7 @@ itertools = { version = "0.12", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
-zip = "1.1.1"
+zip = { version = "1.1.1", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 rand = "0.8"
