--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -24,7 +24,11 @@ path = "src/bin/solc/main.rs"
 required-features = ["solc"]
 
 [build-dependencies]
-vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }
+vergen = { version = "8", optional = true, features = [
+    "build",
+    "git",
+    "gitcl",
+] }
 
 [dependencies]
 fs4 = "0.8"
@@ -45,11 +49,14 @@ clap = { version = "4", features = ["derive"], optional = true }
 console = { version = "0.15", default-features = false, optional = true }
 dialoguer = { version = "0.11", default-features = false, optional = true }
 indicatif = { version = "0.17", default-features = false, optional = true }
-itertools = { version = "0.12", optional = true }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
+itertools = { version = "0.13", optional = true }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "macros",
+], optional = true }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
-zip = { version = "1.1.1", default-features = false, features = ["deflate"] }
+zip = { version = "2", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 rand = "0.8"
