--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ hex = { package = "const-hex", version = "1.10" }
 semver = "1"
 serde = "1"
 serde_json = "1"
-reqwest = { version = "0.12", default-features = false }
+reqwest = { version = "0.12", default-features = false, features = ["socks"] }
