--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -24,10 +24,14 @@ path = "src/bin/solc/main.rs"
 required-features = ["solc"]
 
 [build-dependencies]
-vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }
+vergen = { version = "8", optional = true, features = [
+    "build",
+    "git",
+    "gitcl",
+] }
 
 [dependencies]
-fs4 = "0.9"
+fs4 = "0.10"
 hex.workspace = true
 dirs = "5.0"
 reqwest = { workspace = true, default-features = false, features = ["json"] }
@@ -46,7 +50,10 @@ console = { version = "0.15", default-features = false, optional = true }
 dialoguer = { version = "0.11", default-features = false, optional = true }
 indicatif = { version = "0.17", default-features = false, optional = true }
 itertools = { version = "0.13", optional = true }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "macros",
+], optional = true }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
 zip = { version = "2", default-features = false, features = ["deflate"] }
