feat: improve release profile (#145)
Closes #144

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,28 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/alloy-rs/svm-rs"
 homepage = "https://github.com/alloy-rs/svm-rs"
 
+[workspace.lints.clippy]
+dbg-macro = "warn"
+manual-string-new = "warn"
+uninlined-format-args = "warn"
+use-self = "warn"
+redundant-clone = "warn"
+missing-const-for-fn = "warn"
+needless-return = "allow"
+
+[workspace.lints.rust]
+# missing-copy-implementations = "warn"
+# missing-debug-implementations = "warn"
+# missing-docs = "warn"
+rust-2018-idioms = "warn"
+# unreachable-pub = "warn"
+unused-must-use = "warn"
+redundant-lifetimes = "warn"
+unnameable-types = "warn"
+
+[workspace.lints.rustdoc]
+all = "warn"
+
 [workspace.dependencies]
 svm = { package = "svm-rs", version = "0.5.7", path = "crates/svm-rs", default-features = false }
 
@@ -23,3 +45,9 @@ semver = "1"
 serde = "1"
 serde_json = "1"
 reqwest = { version = "0.12", default-features = false, features = ["socks"] }
+
+[profile.release]
+lto = "fat"
+debug = 0
+strip = "debuginfo"
+codegen-units = 1
