--- a/release.toml
+++ b/release.toml
@@ -7,3 +7,9 @@ sign-tag = true
 shared-version = true
 pre-release-commit-message = "chore: release {{version}}"
 tag-prefix = "" # tag only once instead of per every crate
+pre-release-hook = [
+    "bash",
+    "-c",
+    "$WORKSPACE_ROOT/scripts/changelog.sh --tag {{version}}",
+]
+owners = ["github:alloy-rs:core"]
