chore: use cargo-dist to build binaries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,8 @@ lto = "fat"
 debug = 0
 strip = "debuginfo"
 codegen-units = 1
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
