chore: support for Windows ARM64 (#174)
This PR add support for Windows ARM64. Since there is no dedicated
Solidity version for Windows ARM64 it use the x86 version. Which seems
to work fine using x86 emulation. I was undecided about removing the
`target_arch` for Windows altogether, but I kept it to mark it as a
tested variant.

**Before this PR:**
During the build it was trying to fetch
"https://binaries.soliditylang.org/Unsupported-platform/list.json"
(there is no further error handling if the request fails):
```
PS C:\Users\cakevm\Documents\projects\rust\svm-rs> cargo build
   Compiling svm-rs-builds v0.5.19 (C:\Users\cakevm\Documents\projects\rust\svm-rs\crates\svm-builds)
error: failed to run custom build command for `svm-rs-builds v0.5.19 (C:\Users\cakevm\Documents\projects\rust\svm-rs\crates\svm-builds)`                                

Caused by:
  process didn't exit successfully: `C:\Users\cakevm\Documents\projects\rust\svm-rs\target\debug\build\svm-rs-builds-34686cb3a1738671\build-script-build` (exit code: 101)
  --- stderr

  thread 'main' (5676) panicked at crates\svm-builds\build.rs:150:46:
  Failed to fetch releases: ReqwestError(reqwest::Error { kind: Decode, source: Error("expected value", line: 1, column: 1) })
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
  ```

--- a/crates/svm-rs/Cargo.toml
+++ b/crates/svm-rs/Cargo.toml
@@ -57,7 +57,7 @@ tokio = { version = "1", features = [
     "macros",
 ], optional = true }
 
-[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
+[target.'cfg(target_os = "windows")'.dependencies]
 zip = { version = "4", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
